tests/ui/feature-gates/feature-gate-no_core.stderr
error[E0658]: the `#[no_core]` attribute is an experimental feature
  --> $DIR/feature-gate-no_core.rs:3:1
   |
LL | #![no_core]
   | ^^^^^^^^^^^
   |
   = note: see issue #29639 <https://github.com/rust-lang/rust/issues/29639> for more information
   = help: add `#![feature(no_core)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
