tests/ui/feature-gates/feature-gate-no_core.rs
#![crate_type = "rlib"]

#![no_core] //~ ERROR the `#[no_core]` attribute is an experimental feature

pub struct S {}
